# docs/swagger.json
@@ -1,17 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a simple API to generate placeholder images.",
+        "description": "This is an API to generate placeholder images.",
         "title": "Placeholder API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:5000",
     "basePath": "/",
     "paths": {
         "/placeholder": {
             "get": {
-                "description": "Generates a placeholder image with specified dimensions, text, and colors.",
+                "description": "Generates a placeholder image with specified dimensions, text, and colors. The image size is limited to a maximum of 1000x1000 pixels.",
                 "produces": [
                     "image/png"
                 ],
@@ -20,14 +19,14 @@
                     {
                         "type": "integer",
                         "default": 400,
-                        "description": "Width of the image",
+                        "description": "Width of the image (max 1920)",
                         "name": "width",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 300,
-                        "description": "Height of the image",
+                        "description": "Height of the image (max 1920)",
                         "name": "height",
                         "in": "query"
                     },
@@ -61,13 +60,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "The generated placeholder image",
                         "schema": {
                             "type": "file"
                         }
                     },
                     "400": {
-                        "description": "Invalid input parameters",
+                        "description": "Invalid input parameters or image too large",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error, failed to generate image or encode it",
                         "schema": {
                             "type": "string"
                         }
